--- a/Styles/blog.css
+++ b/Styles/blog.css
@@ -1,7 +1,12 @@
 div{
     background-color: bisque;
-    text-decoration-line: underline;
-    color:crimson;
+    text-decoration-line:none;
     margin-bottom: 10px;
+    margin-top: 10px;
     padding: 10px;
+    box-shadow: 10px 10px 10px;
+    text-decoration: double;
+    text-justify: auto;
+    
+    
 }
