--- a/Styles/blog.css
+++ b/Styles/blog.css
@@ -1,12 +1,20 @@
 div{
-    background-color: bisque;
+    background-color:yellow;
     text-decoration-line:none;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     margin-top: 10px;
     padding: 10px;
     box-shadow: 10px 10px 10px;
+    color:green;
     text-decoration: double;
     text-justify: auto;
     
     
+}
+li{
+    color: darkgreen;
+    background-color: yellow;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 10px 10px 12px;
 }
